--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,27 @@
 {
   "redirects": [
     {
-      "source": "/AI+for+Dummies+%28who+don%27t+use+AI%29",
+      "source": "/AI\\+for\\+Dummies\\+\\(who\\+don't\\+use\\+AI\\)",
       "destination": "/blog/ai-for-dummies-who-dont-use-ai",
       "permanent": true
     },
     {
-      "source": "/AI%20for%20Dummies%20%28who%20don%27t%20use%20AI%29",
+      "source": "/AI%20for%20Dummies%20\\(who%20don't%20use%20AI\\)",
       "destination": "/blog/ai-for-dummies-who-dont-use-ai",
       "permanent": true
     },
     {
-      "source": "/blog/AI+for+Dummies+%28who+don%27t+use+AI%29",
+      "source": "/blog/AI\\+for\\+Dummies\\+\\(who\\+don't\\+use\\+AI\\)",
       "destination": "/blog/ai-for-dummies-who-dont-use-ai",
       "permanent": true
     },
     {
-      "source": "/blog/AI%20for%20Dummies%20%28who%20don%27t%20use%20AI%29",
+      "source": "/blog/AI%20for%20Dummies%20\\(who%20don't%20use%20AI\\)",
       "destination": "/blog/ai-for-dummies-who-dont-use-ai",
       "permanent": true
     },
     {
-      "source": "/Authoritative+Actions",
+      "source": "/Authoritative\\+Actions",
       "destination": "/blog/authoritative-actions",
       "permanent": true
     },
@@ -31,7 +31,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Authoritative+Actions",
+      "source": "/blog/Authoritative\\+Actions",
       "destination": "/blog/authoritative-actions",
       "permanent": true
     },
@@ -41,7 +41,7 @@
       "permanent": true
     },
     {
-      "source": "/Building+the+Rails+for+an+AI-Powered+World",
+      "source": "/Building\\+the\\+Rails\\+for\\+an\\+AI-Powered\\+World",
       "destination": "/blog/building-the-rails-for-an-ai-powered-world",
       "permanent": true
     },
@@ -51,7 +51,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Building+the+Rails+for+an+AI-Powered+World",
+      "source": "/blog/Building\\+the\\+Rails\\+for\\+an\\+AI-Powered\\+World",
       "destination": "/blog/building-the-rails-for-an-ai-powered-world",
       "permanent": true
     },
@@ -61,7 +61,7 @@
       "permanent": true
     },
     {
-      "source": "/Enhancing+Unity+Game+Development",
+      "source": "/Enhancing\\+Unity\\+Game\\+Development",
       "destination": "/blog/enhancing-unity-game-development",
       "permanent": true
     },
@@ -71,7 +71,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Enhancing+Unity+Game+Development",
+      "source": "/blog/Enhancing\\+Unity\\+Game\\+Development",
       "destination": "/blog/enhancing-unity-game-development",
       "permanent": true
     },
@@ -81,7 +81,7 @@
       "permanent": true
     },
     {
-      "source": "/Proof-of-Encryption+in+the+Cloud",
+      "source": "/Proof-of-Encryption\\+in\\+the\\+Cloud",
       "destination": "/blog/proof-of-encryption-in-the-cloud",
       "permanent": true
     },
@@ -91,7 +91,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Proof-of-Encryption+in+the+Cloud",
+      "source": "/blog/Proof-of-Encryption\\+in\\+the\\+Cloud",
       "destination": "/blog/proof-of-encryption-in-the-cloud",
       "permanent": true
     },
@@ -101,7 +101,7 @@
       "permanent": true
     },
     {
-      "source": "/Scaling+Authority+on+the+EVM",
+      "source": "/Scaling\\+Authority\\+on\\+the\\+EVM",
       "destination": "/blog/scaling-authority-on-the-evm",
       "permanent": true
     },
@@ -111,7 +111,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Scaling+Authority+on+the+EVM",
+      "source": "/blog/Scaling\\+Authority\\+on\\+the\\+EVM",
       "destination": "/blog/scaling-authority-on-the-evm",
       "permanent": true
     },
@@ -121,7 +121,7 @@
       "permanent": true
     },
     {
-      "source": "/SKALE+Governance+Update+-+July+7,+2025",
+      "source": "/SKALE\\+Governance\\+Update\\+\\-\\+July\\+7,\\+2025",
       "destination": "/blog/skale-governance-update-july-7-2025",
       "permanent": true
     },
@@ -131,7 +131,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/SKALE+Governance+Update+-+July+7,+2025",
+      "source": "/blog/SKALE\\+Governance\\+Update\\+\\-\\+July\\+7,\\+2025",
       "destination": "/blog/skale-governance-update-july-7-2025",
       "permanent": true
     },
@@ -141,7 +141,7 @@
       "permanent": true
     },
     {
-      "source": "/Supercharge+your+Game",
+      "source": "/Supercharge\\+your\\+Game",
       "destination": "/blog/supercharge-your-game",
       "permanent": true
     },
@@ -151,7 +151,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/Supercharge+your+Game",
+      "source": "/blog/Supercharge\\+your\\+Game",
       "destination": "/blog/supercharge-your-game",
       "permanent": true
     },
@@ -161,7 +161,7 @@
       "permanent": true
     },
     {
-      "source": "/The+Power+of+Random",
+      "source": "/The\\+Power\\+of\\+Random",
       "destination": "/blog/the-power-of-random",
       "permanent": true
     },
@@ -171,7 +171,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/The+Power+of+Random",
+      "source": "/blog/The\\+Power\\+of\\+Random",
       "destination": "/blog/the-power-of-random",
       "permanent": true
     },
@@ -181,7 +181,7 @@
       "permanent": true
     },
     {
-      "source": "/The+Rise+of+the+Machine+Economy",
+      "source": "/The\\+Rise\\+of\\+the\\+Machine\\+Economy",
       "destination": "/blog/the-rise-of-the-machine-economy",
       "permanent": true
     },
@@ -191,7 +191,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/The+Rise+of+the+Machine+Economy",
+      "source": "/blog/The\\+Rise\\+of\\+the\\+Machine\\+Economy",
       "destination": "/blog/the-rise-of-the-machine-economy",
       "permanent": true
     },
@@ -201,7 +201,7 @@
       "permanent": true
     },
     {
-      "source": "/x402+via+EIP-3009+Forwarding",
+      "source": "/x402\\+via\\+EIP-3009\\+Forwarding",
       "destination": "/blog/x402-via-eip3009-forwarding",
       "permanent": true
     },
@@ -211,7 +211,7 @@
       "permanent": true
     },
     {
-      "source": "/blog/x402+via+EIP-3009+Forwarding",
+      "source": "/blog/x402\\+via\\+EIP-3009\\+Forwarding",
       "destination": "/blog/x402-via-eip3009-forwarding",
       "permanent": true
     },
@@ -221,7 +221,7 @@
       "permanent": true
     },
     {
-      "source": "/TheGreatAxios+Website",
+      "source": "/TheGreatAxios\\+Website",
       "destination": "/",
       "permanent": true
     },
