Light Mode, Cleanup Holding, Add Feb 15 Blog, Add New Projects, Cleanup Projects, Add Markdown Build

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "installCommand": "bun install",
+  "buildCommand": "bun run build",
   "redirects": [
     {
       "source": "/AI\\+for\\+Dummies\\+\\(who\\+don't\\+use\\+AI\\)",
