--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
-    "build": "vocs build",
+    "build:md": "node scripts/export-md.mjs",
+    "build:site": "vocs build",
+    "build": "bun run build:md && bun run build:site",
     "preview": "vocs preview"
   },
   "dependencies": {
-    "@vercel/speed-insights": "^1.2.0",
-    "lucide-react": "^0.546.0",
-    "react": "latest",
-    "react-dom": "latest",
-    "vocs": "latest"
+    "@vercel/speed-insights": "^1.3.1",
+    "lucide-react": "^0.564.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "vocs": "^1.4.1"
   },
   "devDependencies": {
-    "@types/react": "latest",
-    "typescript": "latest"
+    "@types/react": "^19.2.14",
+    "typescript": "^5.9.3"
   }
 }
